# talos-mcp-server

./: CHANGELOG.md  EXAMPLES.md  LICENSE  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  claude_desktop_config.example.json  pyproject.toml  setup.sh  test_connection.py
src/talos_mcp/: __init__.py  server.py
